--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
  * Theme Name: BingoPress
  * Theme URI: https://artistudio.xyz
  * Author: Artistudio
- * Author URI: https://wiki.artistudio.xyz
+ * Author URI: https://agung2001.github.io
  * Description: BingoPress Theme is simple WordPress theme built with TailwindCSS.
  * Tags: blog, portfolio
  * Requires at least: 5.3
  * Tested up to: 5.7
  * Requires PHP: 5.6
- * Version: 1.0.1
+ * Version: 1.0.2
  * License: GPL-3.0
  * License URI: http://www.gnu.org/licenses/gpl-3.0.txt
  * Text Domain: bingopress
