--- a/style.css
+++ b/style.css
@@ -8,15 +8,21 @@
  * Requires at least: 5.3
  * Tested up to: 5.7
  * Requires PHP: 5.6
- * Version: 1.1.5
+ * Version: 1.2.9
  * License: GPL-3.0
  * License URI: http://www.gnu.org/licenses/gpl-3.0.txt
  * Text Domain: bingopress
 */
 
-.wp-caption {}
-.wp-caption-text {}
-.gallery-caption {}
-.bypostauthor {}
-.alignright {}
-.alignleft {}
+.wp-caption {
+}
+.wp-caption-text {
+}
+.gallery-caption {
+}
+.bypostauthor {
+}
+.alignright {
+}
+.alignleft {
+}
