--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /**
  * Theme Name: BingoPress
+ * Theme URI: https://artistudio.xyz
  * Author: Artistudio
  * Author URI: https://agung2001.github.io
  * Description: BingoPress Theme is simple WordPress theme built with TailwindCSS.
@@ -7,7 +8,7 @@
  * Requires at least: 5.0
  * Tested up to: 6.1.1
  * Requires PHP: 7.1
- * Version: 1.2.10
+ * Version: 1.2.11
  * License: GPL-3.0
  * License URI: http://www.gnu.org/licenses/gpl-3.0.txt
  * Text Domain: bingopress
