--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
  * Author URI: https://agung2001.github.io
  * Description: BingoPress Theme is simple WordPress theme built with TailwindCSS.
  * Tags: blog, portfolio
- * Requires at least: 5.0
+ * Requires at least: 5.5
  * Tested up to: 6.1.1
  * Requires PHP: 7.1
- * Version: 1.3.3
- * License: GPL-3.0
- * License URI: http://www.gnu.org/licenses/gpl-3.0.txt
+ * Version: 1.3.4
+ * License: GPLv2 or later
+ * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain: bingopress
 */
 
